# RPGtool

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: cthulhuhack.db  main.css
assets/datas/: archetype.json  atout_generique.json
src/: chthulhu_gen.rs  dashboard.rs  dice_custom.rs  diceboard.rs  main.rs  nav_bandeau.rs  page2.rs  page3.rs  page4.rs  utils.rs
src/chtulhu_data/: archetypes_hack.rs  mod.rs
src/dice/: diceboard.rs  mod.rs
src/gen_struct/: chthulhu_gen.rs  cthulhu_struct.rs  generate_tarot.rs  mod.rs  rpg_utils.rs
src/pdfprinter/: mod.rs  pdf.rs
