[package]
name = "dioxus_desk"
version = "0.1.0"
authors = ["fred <fred>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dioxus = { version = "0.7.1", features = ["desktop"] }
getrandom = {version = "0.3.3", features = ["wasm_js"]}
rand = {version ="0.9.1"}
js-sys= {version = "^0.3"}
serde_json = "1.0.82"
serde = { version = "^1.0", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
dioxus-desktop = "0.7.1"
dice_forge = "0.3.0"
ndm = "0.9.10"
tyche = "0.3.1"
rpg-dice-roller = "0.2.0"
printpdf = "0.8.0"
chrono = "0.4.42"
textwrap = { version="0.16.2", features = ["hyphenation","terminal_size"]}

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
